# Str-AI-hd_von_ZaroBot

./: .env.edit.this.txt  Dockerfile  README.md  linux_install.sh  pyproject.toml  windows_install.bat
core/: chat.py
